...
      component={InventoryDetailScreen}
      options={{ title: 'Wine Details' }}
    />
    <InventoryStack.Screen
      name="WineDetail"
      component={WineDetailScreenV3}
      options={{ title: 'Wine Info', headerShown: false }}
    />
    <InventoryStack.Screen
      name="AddWishlistStep1"
      component={AddWishlistStep1}
      options={{ headerShown: false }}
    />
...
